desktop navbar and header changes

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,6 +1,8 @@
-$color-1: #9AC5F4;
-$color-2: #67D9FE;
-$color-3: #3BEAEF;
-$color-4: #64F6C9;
-$color-5: #ACFC98;
-$color-6: #F9F871;
+$color-1: #67D9FE;
+$color-1-hover: #83defc;
+$color-2: #F98873;
+$color-3: #F6F853;
+$text-dark: #000000;
+$text-light: #FFFFFF;
+$background-1: #FAFAFA;
+$background-2: #EAEAEA;
