--- a/src/components/_header.scss
+++ b/src/components/_header.scss
@@ -1,11 +1,162 @@
 header {
-  background-color: $color-1;
-  color: white;
+  background-color: $background-1;
+  color: $text-dark;
   padding: 1rem;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.navbar {
+  display: inline-flex;
+  position: relative;
+  padding: 0;
+
+  >li {
+    display: inline-block;
+    margin: 0;
+    border: 0 1px 0 1px solid black;
+    background-color: $background-2;
+
+    a {
+      text-decoration: none;
+      padding: 10px 15px;
+      color: black;
+      display: block;
+    }
+  }
+
+  li:first-child {
+    border-radius: 20px 0 0 20px;
+  }
+
+  li:last-child {
+    border-radius: 0 20px 20px 0;
+  }
+
+  li:hover {
+    background-color: $color-1;
+
+    color: $text-light;
+
+    a {
+      color: $text-light;
+    }
+
+  }
+
+  .dropdown {
+    background-color: $color-1;
+    position: absolute;
+    padding: 20px 0;
+    opacity: 0;
+    left: 0;
+    visibility: hidden;
+    width: 100%;
+    border-radius: 0 0 20px 20px;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    li {
+      list-style: none;
+      width: fit-content;
+      block-size: fit-content;
+
+      margin: 10px;
+
+      a {
+        border-radius: 20px;
+      }
+
+      :hover {
+        background-color: $color-1-hover;
+      }
+    }
+
+    .dd-subcontent {
+      background-color: $color-1-hover;
+      margin: 20px;
+      padding: 0 20px;
+      border-radius: 20px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+
+      img {
+        margin: 20px 20px 20px 0;
+        border-radius: 20px;
+        height: 200px;
+      }
+    }
+  }
+
+  li:hover .dropdown {
+    opacity: 1;
+    visibility: visible;
+  }
+}
+
+.navbar:hover {
+  border-radius: 20px 20px 0 0;
+
+  li:first-child {
+    border-radius: 20px 0 0 0;
+  }
+
+  li:last-child {
+    border-radius: 0 20px 0 0;
+  }
+}
+
+.hamburger {
+  display: none;
 }
 
 main {
   padding: 2rem;
   color: #333;
+}
+
+@media (max-width: 1250px) {
+  .navbar {
+    display: none;
+  }
+
+  .hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    width: 60px;
+    height: 60px;
+    transition: .3s;
+
+    div {
+      background-color: $color-2;
+      height: 10px;
+      width: 60px;
+      border-radius: 10px;
+      transition: .3s;
+    }
+  }
+
+  .hamburger-active {
+
+
+    :nth-child(1) {
+      transform: translateY(15px) rotate(45deg);
+    }
+
+    :nth-child(2) {
+      display: none;
+    }
+
+    :nth-child(3) {
+      transform: translateY(-15px) rotate(-45deg);
+    }
+  }
 }
