--- a/src/index.scss
+++ b/src/index.scss
@@ -2,11 +2,12 @@
 
 @import "components/header";
 @import "components/footer";
+@import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
 body {
     font-family: Arial, sans-serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
+    font-family: 'Mitr';
 }
-
