--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,12 +2,14 @@
 
 @import "components/header";
 @import "components/footer";
+@import "components/container";
+@import "components/slider";
+
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    font-family: 'Mitr';
+  background-color: #f4f4f4;
+  margin: 0;
+  padding: 0;
+  font-family: 'Mitr', serif;
 }
