--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,9 +1,50 @@
 footer {
   background-color: $color-2;
   color: white;
-  text-align: center;
   padding: 1rem;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
+  margin-top: 1rem;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  .footer-column {
+    flex: 1 1 30%;
+    padding: 1rem;
+    min-width: 200px;
+
+    @media (max-width: 768px) {
+      flex: 1 1 100%;
+    }
+
+    &-left {
+      border-right: 1px solid white;
+
+      @media (max-width: 768px) {
+        border-right: 0;
+      }
+    }
+
+    &-right {
+      border: 0;
+      margin-right: 0;
+
+      @media (max-width: 768px) {
+        border-top: 1px solid white;
+      }
+    }
+  }
+
+  .footer-copyright {
+    width: 100%;
+    text-align: center;
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    font-size: 0.875rem;
+
+    p {
+      margin: 0;
+    }
+  }
 }
+
+
