--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -2,6 +2,7 @@ $color-1: #67D9FE;
 $color-1-hover: #83defc;
 $color-2: #F98873;
 $color-3: #F6F853;
+$color-4: #8A3FFC;
 $text-dark: #000000;
 $text-light: #FFFFFF;
 $background-1: #FAFAFA;
