--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,6 +8,9 @@
 @import "components/footer";
 @import "components/container";
 @import "components/slider";
+@import "components/page-card";
+@import "components/banner-with-image-left";
+@import "components/banner-with-image-right";
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
