--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,10 +12,13 @@
 @import "components/banner-with-image-left";
 @import "components/banner-with-image-right";
 
+@import "pages/post";
+
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
 body {
   background-color: #f4f4f4;
+  color: #333;
   margin: 0;
   padding: 0;
   font-family: 'Mitr', serif;
