--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,9 +11,12 @@
 @import "components/page-card";
 @import "components/banner-with-image-left";
 @import "components/banner-with-image-right";
+@import "components/page-title";
+@import "components/arrow-button";
 
 @import "pages/post";
 @import "pages/content";
+@import "pages/posts-list";
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
