--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -6,6 +6,7 @@ footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+  text-align: left;
 
   .footer-column {
     flex: 1 1 30%;
@@ -14,11 +15,11 @@ footer {
 
     @media (max-width: 768px) {
       flex: 1 1 100%;
+      text-align: center;
     }
 
     &-left {
       border-right: 1px solid white;
-      text-align: right;
 
       @media (max-width: 768px) {
         border-right: 0;
@@ -31,6 +32,49 @@ footer {
 
       @media (max-width: 768px) {
         border-top: 1px solid white;
+      }
+    }
+
+    &-menu {
+      flex: 1 1 30%;
+      border-left: 1px solid white;
+      padding-left: 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+
+      @media (max-width: 1024px) {
+        flex: 1 1 100%;
+        border-left: 0;
+        border-top: 1px solid white;
+        padding-left: 0;
+        justify-content: center;
+      }
+
+
+
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+
+        li {
+          flex: 1 1 45%;
+          margin: 0.5rem 0;
+          text-align: left;
+        }
+
+        @media (max-width: 1024px) {
+          justify-content: center;
+
+          li {
+            flex: 1 1 45%;
+            text-align: center;
+          }
+        }
       }
     }
   }
@@ -47,5 +91,3 @@ footer {
     }
   }
 }
-
-
