--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,14 +1,17 @@
 header {
   background-color: $background-1;
   color: $text-dark;
-  position: relative;
-  padding: 1rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
   text-align: center;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   padding: 0 20px;
+  z-index: 1000;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .logo-box {
