Update page contents

--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -6,7 +6,7 @@
 }
 
 #path2357 {
-    width: 100vw;
+    width: 100%;
     /* Ensure the stroke is visible */
     fill: transparent;
     /* Ensure the fill doesn't hide the stroke */
