--- a/src/styles/components/_banner-with-image-right.scss
+++ b/src/styles/components/_banner-with-image-right.scss
@@ -4,6 +4,7 @@
   min-height: 10vh;
   border-radius: 20px;
   display: flex;
+  flex-wrap: wrap-reverse;
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
@@ -14,6 +15,10 @@
     padding: 0.5rem;
     background-color: $color-5;
     border-radius: 50%;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
 
     img {
       object-fit: cover;
@@ -27,6 +32,10 @@
     width: 60%;
     text-align: right;
     margin-right: 2rem;
+
+    @media (max-width: 768px) {
+      width: 100%;
+    }
 
     p {
       text-align: justify;
