--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -43,7 +43,7 @@ header {
   z-index: 99;
   display: inline-flex;
   position: relative;
-  padding: 0;
+  margin-right: 30px;
 
   >li {
     display: inline-block;
@@ -247,6 +247,7 @@ main {
   }
 
   .hamburger {
+    margin-right: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
