--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -1,3 +1,67 @@
+.bg-back {
+    background-color: azure;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: -10;
+    overflow-x: hidden;
+}
+
+.bg-front {
+    position: fixed;
+    z-index: -9;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+    background: linear-gradient(124deg, rgba(103, 217, 254, 1) 0%, rgba(205, 234, 125, 1) 41%, rgba(249, 136, 115, 1) 100%);
+
+    mask: url(#starMask);
+}
+
+.svg-stars {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    width: 100%;
+    height: 100vh;
+    overflow-x: hidden;
+}
+
+.clouds {
+    z-index: -5;
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 200px;
+    overflow-x: hidden;
+    /* Adjust height as needed */
+}
+
+.cloud1 {
+    box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
+    transform: translate(-280%, 41%);
+}
+
+.cloud2 {
+    box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
+    transform: translate(-220%, 60%);
+}
+
+.cloud3 {
+    box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
+    transform: translate(300%, 50%);
+}
+
+#starMask {
+    width: 100vw;
+    height: 100vh;
+    overflow-x: hidden;
+}
+
 .bgpath {
     width: 100%;
     z-index: -1;
