--- a/src/styles/components/_background.scss
+++ b/src/styles/components/_background.scss
@@ -44,16 +44,40 @@
 .cloud1 {
     box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
     transform: translate(-280%, 41%);
+    
+    @media (max-width: 1200px) {
+        transform: translate(-180%, 41%);
+    }
+
+    @media (max-width: 800px) {
+        transform: translate(-80%, 41%);
+    }
 }
 
 .cloud2 {
     box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
     transform: translate(-220%, 60%);
+
+    @media (max-width: 1200px) {
+        transform: translate(-120%, 60%);
+    }
+
+    @media (max-width: 800px) {
+        transform: translate(-20%, 60%);
+    }
 }
 
 .cloud3 {
     box-shadow: 0px 0px 24px 0px rgba(66, 68, 90, 1);
     transform: translate(300%, 50%);
+
+    @media (max-width: 1200px) {
+        transform: translate(200%, 50%);
+    }
+
+    @media (max-width: 800px) {
+        transform: translate(100%, 50%);
+    }
 }
 
 #starMask {
