--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -206,6 +206,12 @@ main {
 @media (max-width: 1500px) {
   header {
     flex-direction: column;
+    padding-left: 0 !important;
+  }
+
+  .navbar {
+    margin-right: 0 !important;
+    padding: 0 !important;
   }
 }
 
