--- a/src/styles/components/_banner-with-image-right.scss
+++ b/src/styles/components/_banner-with-image-right.scss
@@ -1,6 +1,6 @@
 .banner-with-image-right {
   background-color: $color-1;
-  margin-top: 2rem;
+  margin-top: 10px;
   min-height: 10vh;
   border-radius: 20px;
   display: flex;
