--- a/src/styles/pages/_about-us.scss
+++ b/src/styles/pages/_about-us.scss
@@ -2,25 +2,43 @@
   display: flex;
   flex-wrap: wrap;
 
+  #pin-icon {
+    position: absolute;
+    height: 300px;
+    width: 200px;
+    top: -100px;
+    left: 20px;
+    object-fit: contain;
+  }
+
   &-information-container {
     display: flex;
     flex-wrap: wrap;
+
     justify-content: space-between;
     width: 100%;
     padding-bottom: 1rem;
 
     &-column {
+      overflow: hidden;
       width: 48%;
       background-color: $color-2;
       border-radius: 20px;
 
       &-subcontent {
+        div {
+          text-align: right;
+          color: #fec2b3;
+        }
+
+        position: relative;
         display: flex;
         flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+        width: 90%;
+        height: 100%;
+        justify-content: flex-end;
+        align-items: flex-end;
         padding: 1rem;
-        height: calc(100% - 7rem);
 
         @media (max-width: 500px) {
           img {
