--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -34,6 +34,11 @@ footer {
         flex-direction: row;
         align-items: flex-start;
 
+        @media (max-width: 768px) {
+          align-items: center;
+          justify-content: center;
+        }
+
         >div {
           margin-left: 10px;
         }
