--- a/src/styles/pages/_about-us.scss
+++ b/src/styles/pages/_about-us.scss
@@ -24,11 +24,15 @@
       width: 48%;
       background-color: $color-2;
       border-radius: 20px;
+      max-height: 30vh;
 
       &-subcontent {
         div {
           text-align: right;
-          color: #fec2b3;
+
+          p {
+            color: #fec2b3 !important;
+          }
         }
 
         position: relative;
@@ -43,6 +47,25 @@
         @media (max-width: 500px) {
           img {
             display: none;
+          }
+        }
+      }
+
+      &-other {
+        &-subcontent {
+          div {
+            text-align: left !important;
+          }
+
+          justify-content: flex-start;
+          align-items: center;
+          padding: 1rem;
+          height: 90%;
+
+          @media (max-width: 500px) {
+            img {
+              display: none;
+            }
           }
         }
       }
