--- a/src/styles/components/_banner-with-image-right.scss
+++ b/src/styles/components/_banner-with-image-right.scss
@@ -8,6 +8,11 @@
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
+  transition: 0.3s;
+
+  &:hover {
+    background-color: $color-1-hover;
+  }
 
   &-image {
     height: 100%;
