--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,6 +19,7 @@
 @import "pages/content";
 @import "pages/posts-list";
 @import "pages/about-us";
+@import "pages/gallery";
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
