--- a/src/styles/pages/_post.scss
+++ b/src/styles/pages/_post.scss
@@ -1,18 +1,12 @@
-.post-image {
+.post-container {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
-
-  &-container {
-    width: 100%;
-    height: 40vh;
-    border-radius: 20px;
-    overflow: hidden;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    background-color: white;
-    display: flex;
-    align-items: center;
-  }
+  height: 40vh;
+  border-radius: 20px;
+  overflow: hidden;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  display: flex;
+  align-items: center;
 }
 
 .post-title {
