--- a/src/styles/components/_arrow-button.scss
+++ b/src/styles/components/_arrow-button.scss
@@ -2,7 +2,9 @@
   margin-right: 0;
   width: 25%;
   background-color: $color-1;
-  padding: 1.2rem;
+  padding: 15px 25px;
+  text-decoration: none;
+  border-radius: 15px;
   border: none;
   font-size: 1rem;
   font-weight: 550;
@@ -12,7 +14,6 @@
   background-position: calc(100% - 1rem) 50%;
   background-size: 2.5rem;
   transition: background-position 0.3s ease;
-  border-radius: 30px;
   cursor: pointer;
   align-self: flex-end;
 
