--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,6 +14,7 @@
 @import "components/page-title";
 @import "components/arrow-button";
 @import "components/background";
+@import "components/button";
 
 @import "pages/post";
 @import "pages/content";
