--- a/src/styles/components/_page-card.scss
+++ b/src/styles/components/_page-card.scss
@@ -18,15 +18,15 @@
   }
 
   &-1-additional {
-    background: url('../src/images/icons/blob1.svg') no-repeat top right;
+    background: url('../images/icons/blob1.svg') no-repeat top right;
   }
 
   &-2-additional {
-    background: url('../src/images/icons/blob2.svg') no-repeat top right;
+    background: url('../images/icons/blob2.svg') no-repeat top right;
   }
 
   &-3-additional {
-    background: url('../src/images/icons/blob3.svg') no-repeat top right;
+    background: url('../images/icons/blob3.svg') no-repeat top right;
   }
 
   &-1 {
