--- a/src/styles/components/_arrow-button.scss
+++ b/src/styles/components/_arrow-button.scss
@@ -9,7 +9,7 @@
   font-size: 1rem;
   font-weight: 550;
   color: white;
-  background-image: url("../src/images/icons/arrow.svg");
+  background-image: url("../images/icons/arrow.svg");
   background-repeat: no-repeat;
   background-position: calc(100% - 1rem) 50%;
   background-size: 2.5rem;
