--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -157,7 +157,7 @@ main {
   display: block;
   width: 40px;
   height: 40px;
-  background: url('../src/images/icons/left.svg') no-repeat;
+  background: url('../images/icons/left.svg') no-repeat;
   filter: drop-shadow(0 0 5px #333);
 }
 
@@ -165,7 +165,7 @@ main {
   display: block;
   width: 20px;
   height: 20px;
-  background: url('../src/images/icons/right.svg') no-repeat;
+  background: url('../images/icons/right.svg') no-repeat;
   filter: drop-shadow(0 0 5px #333);
 }
 
@@ -184,7 +184,7 @@ main {
 
 .slick-prev:hover,
 .slick-prev:focus {
-  background: url('../src/images/icons/left.svg') no-repeat;
+  background: url('../images/icons/left.svg') no-repeat;
   z-index: 5 !important;
   width: 40px;
   height: 40px;
@@ -195,7 +195,7 @@ main {
 
 .slick-next:hover,
 .slick-next:focus {
-  background: url('../src/images/icons/right.svg') no-repeat;
+  background: url('../images/icons/right.svg') no-repeat;
   z-index: 5 !important;
   width: 40px;
   height: 40px;
