--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -21,6 +21,7 @@
 @import "pages/posts-list";
 @import "pages/about-us";
 @import "pages/gallery";
+@import "pages/list-points";
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
