--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1375,7 +1375,6 @@ footer .footer-copyright p {
   width: 48%;
   background-color: #F98873;
   border-radius: 20px;
-  max-height: 30vh;
 }
 .offer-additional-information-container-column-subcontent {
   position: relative;
@@ -1386,6 +1385,10 @@ footer .footer-copyright p {
   justify-content: flex-end;
   align-items: flex-end;
   padding: 1rem;
+}
+.offer-additional-information-container-column-subcontent-less-text p {
+  padding-left: 0.8rem;
+  font-size: 1.2rem !important;
 }
 .offer-additional-information-container-column-subcontent div {
   text-align: right;
@@ -1402,7 +1405,6 @@ footer .footer-copyright p {
   justify-content: flex-start;
   align-items: center;
   padding: 1rem;
-  height: 90%;
 }
 .offer-additional-information-container-column-other-subcontent div {
   text-align: left !important;
