--- a/src/styles/pages/_about-us.scss
+++ b/src/styles/pages/_about-us.scss
@@ -24,9 +24,13 @@
       width: 48%;
       background-color: $color-2;
       border-radius: 20px;
-      max-height: 30vh;
 
       &-subcontent {
+        &-less-text p {
+          padding-left: 0.8rem;
+          font-size: 1.2rem !important;
+        }
+
         div {
           text-align: right;
 
@@ -60,7 +64,6 @@
           justify-content: flex-start;
           align-items: center;
           padding: 1rem;
-          height: 90%;
 
           @media (max-width: 500px) {
             img {
