--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -512,7 +512,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-between;
   text-align: left;
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   padding-left: 0 !important;
@@ -622,6 +622,13 @@ footer .footer-copyright p {
 
 .footer-section-title {
   text-align: center;
+}
+
+.footer-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
 
 .container {
