--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -7,7 +7,7 @@ footer {
   flex-wrap: wrap;
   justify-content: space-between;
   text-align: left;
-  position: absolute;
+  position: relative;
   bottom: 0;
 
   width: 100%;
@@ -126,4 +126,11 @@ footer {
 
 .footer-section-title {
   text-align: center;
+}
+
+.footer-container {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
