--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /* Slider */
+@import "../../node_modules/aos/dist/aos.css";
 @import url("https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap");
 .slick-slider {
   position: relative;
