--- a/src/styles/components/_banner-with-image-right.scss
+++ b/src/styles/components/_banner-with-image-right.scss
@@ -8,7 +8,7 @@
   padding: 1rem;
   align-items: center;
   justify-content: space-between;
-  transition: 0.3s;
+  transition: 0.3s !important;
 
   &:hover {
     background-color: $color-1-hover;
