--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -11,7 +11,7 @@
     text-decoration: none;
     border-radius: 15px;
     font-size: 1rem;
-    transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease !important;
     border: none;
     cursor: pointer;
 
