--- a/src/styles/pages/_posts-list.scss
+++ b/src/styles/pages/_posts-list.scss
@@ -22,7 +22,7 @@
     padding: 0 !important;
     border-radius: 20px;
     flex: 1;
-    transition: 0.3s;
+    transition: 0.3s !important;
 
     &:hover {
       width: 100%;
