--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -228,7 +228,7 @@ main {
     height: 100vh;
     top: -100vh;
     background-color: $color-1;
-    transition: .4s;
+    transition: .4s !important;
     margin: 0;
     left: 0;
 
@@ -249,7 +249,7 @@ main {
 
   .navbar-revealed {
     top: 0;
-    transition: .4s;
+    transition: .4s !important;
     position: fixed;
   }
 
@@ -260,7 +260,7 @@ main {
     justify-content: space-around;
     width: 60px;
     height: 60px;
-    transition: .3s;
+    transition: .3s !important;
     z-index: 101;
 
     div {
@@ -268,7 +268,7 @@ main {
       height: 10px;
       width: 60px;
       border-radius: 10px;
-      transition: .3s;
+      transition: .3s !important;
     }
   }
 
