--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -538,6 +538,11 @@ footer .footer-column-left {
     border-right: 0;
   }
 }
+footer .footer-column-middle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 footer .footer-column-right {
   border: 0;
   margin-right: 0;
@@ -625,7 +630,7 @@ footer .footer-copyright p {
   text-align: center;
 }
 
-.footer-container {
+div.footer-container {
   position: relative;
   display: flex;
   flex-direction: column;
@@ -1365,8 +1370,8 @@ footer .footer-copyright p {
 }
 .offer-additional #pin-icon {
   position: absolute;
-  height: 300px;
-  width: 200px;
+  height: 400px;
+  width: 300px;
   top: -100px;
   left: 20px;
   object-fit: contain;
@@ -1402,7 +1407,8 @@ footer .footer-copyright p {
   text-align: right;
 }
 .offer-additional-information-container-column-subcontent div p {
-  color: #fec2b3 !important;
+  color: #fff !important;
+  font-size: 2.5rem;
 }
 @media (max-width: 500px) {
   .offer-additional-information-container-column-subcontent img {
