--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -46,7 +46,7 @@ header {
   padding: 0;
   margin-right: 30px;
 
-  >li {
+  > li {
     display: inline-block;
     margin: 0;
     border: 0 1px 0 1px solid black;
@@ -232,7 +232,7 @@ main {
     margin: 0;
     left: 0;
 
-    >li {
+    > li {
       display: block;
       border-radius: 20px;
       background-color: $color-1;
@@ -287,14 +287,24 @@ main {
       transform: translateY(-15px) rotate(-45deg);
     }
   }
-
-
 }
 
 @media(max-width: 500px) {
   .logo-box {
-    div {
-      display: none;
+    width: 100%;
+  }
+}
+
+@media(max-width: 400px) {
+  .logo-box, .hamburger {
+    transform: scale(0.9);
+
+    h2 {
+      font-size: 0.9rem;
+    }
+
+    p {
+      font-size: 0.63rem;
     }
   }
 }
