--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -16,6 +16,7 @@
 @import "components/arrow-button";
 @import "components/background";
 @import "components/button";
+@import "components/not-found-text";
 
 @import "pages/post";
 @import "pages/content";
@@ -23,6 +24,7 @@
 @import "pages/about-us";
 @import "pages/gallery";
 @import "pages/list-points";
+@import "pages/page-full-image";
 
 @import url('https://fonts.googleapis.com/css2?family=Mitr:wght@200;300;400;500;600;700&display=swap');
 
